// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HotspotDrawable render renders 1`] = `
<div>
  <div
    class="css-19sk4h4"
  >
    <div
      class="css-wioyy2"
    >
      <img
        class="css-p8sy9u"
        src="https://cdn.fluence.net/image/0240eb1455ce4c4bb6180232347b6aef_W"
        style="height: 291px; width: 410px;"
      />
      <div
        class="css-xn3u"
      />
    </div>
    <div
      class="css-1leypxp"
      data-testid="stage"
      height="291"
      width="410"
    >
      <div
        data-testid="layer"
      >
        <div
          data-testid="group"
          padding="12"
        >
          <div
            cursor="pointer"
            data-testid="rect"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            height="140"
            opacity="0.5"
            stroke="blue"
            stroke-width="5"
            width="130"
            x="1"
            y="1"
          />
        </div>
        <div
          data-testid="group"
          padding="12"
        >
          <div
            cursor="pointer"
            data-testid="rect"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            height="140"
            opacity="0.5"
            stroke="blue"
            stroke-width="0"
            width="130"
            x="140"
            y="1"
          />
        </div>
        <div
          data-testid="group"
          padding="12"
        >
          <div
            cursor="pointer"
            data-testid="rect"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            height="140"
            opacity="0.5"
            stroke="blue"
            stroke-width="0"
            width="130"
            x="280"
            y="1"
          />
        </div>
        <div
          data-testid="group"
        >
          <div
            data-testid="line"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            opacity="0.5"
            points="0,-140,0,0,128,0,128,-140"
            stroke="blue"
            stroke-width="5"
            x="1"
            y="288"
          />
        </div>
        <div
          data-testid="group"
        >
          <div
            data-testid="line"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            opacity="0.5"
            points="0,-138,0,0,128,0,128,-138"
            stroke=""
            stroke-width="0"
            x="141"
            y="289"
          />
        </div>
        <div
          data-testid="group"
        >
          <div
            data-testid="line"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            opacity="0.5"
            points="0,-139,0,0,128,0,128,-139"
            stroke=""
            stroke-width="0"
            x="279"
            y="289"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HotspotDrawable render renders with default strokeWidth 1`] = `
<div>
  <div
    class="css-19sk4h4"
  >
    <div
      class="css-wioyy2"
    >
      <img
        class="css-p8sy9u"
        src="https://cdn.fluence.net/image/0240eb1455ce4c4bb6180232347b6aef_W"
        style="height: 291px; width: 410px;"
      />
      <div
        class="css-xn3u"
      />
    </div>
    <div
      class="css-1leypxp"
      data-testid="stage"
      height="291"
      width="410"
    >
      <div
        data-testid="layer"
      >
        <div
          data-testid="group"
          padding="12"
        >
          <div
            cursor="pointer"
            data-testid="rect"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            height="140"
            opacity="0.5"
            stroke="blue"
            stroke-width="5"
            width="130"
            x="1"
            y="1"
          />
        </div>
        <div
          data-testid="group"
          padding="12"
        >
          <div
            cursor="pointer"
            data-testid="rect"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            height="140"
            opacity="0.5"
            stroke="blue"
            stroke-width="0"
            width="130"
            x="140"
            y="1"
          />
        </div>
        <div
          data-testid="group"
          padding="12"
        >
          <div
            cursor="pointer"
            data-testid="rect"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            height="140"
            opacity="0.5"
            stroke="blue"
            stroke-width="0"
            width="130"
            x="280"
            y="1"
          />
        </div>
        <div
          data-testid="group"
        >
          <div
            data-testid="line"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            opacity="0.5"
            points="0,-140,0,0,128,0,128,-140"
            stroke="blue"
            stroke-width="5"
            x="1"
            y="288"
          />
        </div>
        <div
          data-testid="group"
        >
          <div
            data-testid="line"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            opacity="0.5"
            points="0,-138,0,0,128,0,128,-138"
            stroke=""
            stroke-width="0"
            x="141"
            y="289"
          />
        </div>
        <div
          data-testid="group"
        >
          <div
            data-testid="line"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            opacity="0.5"
            points="0,-139,0,0,128,0,128,-139"
            stroke=""
            stroke-width="0"
            x="279"
            y="289"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HotspotDrawable render renders with given strokeWidth 1`] = `
<div>
  <div
    class="css-19sk4h4"
  >
    <div
      class="css-wioyy2"
    >
      <img
        class="css-p8sy9u"
        src="https://cdn.fluence.net/image/0240eb1455ce4c4bb6180232347b6aef_W"
        style="height: 291px; width: 410px;"
      />
      <div
        class="css-xn3u"
      />
    </div>
    <div
      class="css-1leypxp"
      data-testid="stage"
      height="291"
      width="410"
    >
      <div
        data-testid="layer"
      >
        <div
          data-testid="group"
          padding="12"
        >
          <div
            cursor="pointer"
            data-testid="rect"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            height="140"
            opacity="0.5"
            stroke="blue"
            stroke-width="10"
            width="130"
            x="1"
            y="1"
          />
        </div>
        <div
          data-testid="group"
          padding="12"
        >
          <div
            cursor="pointer"
            data-testid="rect"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            height="140"
            opacity="0.5"
            stroke="blue"
            stroke-width="0"
            width="130"
            x="140"
            y="1"
          />
        </div>
        <div
          data-testid="group"
          padding="12"
        >
          <div
            cursor="pointer"
            data-testid="rect"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            height="140"
            opacity="0.5"
            stroke="blue"
            stroke-width="0"
            width="130"
            x="280"
            y="1"
          />
        </div>
        <div
          data-testid="group"
        >
          <div
            data-testid="line"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            opacity="0.5"
            points="0,-140,0,0,128,0,128,-140"
            stroke="blue"
            stroke-width="10"
            x="1"
            y="288"
          />
        </div>
        <div
          data-testid="group"
        >
          <div
            data-testid="line"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            opacity="0.5"
            points="0,-138,0,0,128,0,128,-138"
            stroke=""
            stroke-width="0"
            x="141"
            y="289"
          />
        </div>
        <div
          data-testid="group"
        >
          <div
            data-testid="line"
            draggable="true"
            fill="rgba(137, 183, 244, 0.65)"
            opacity="0.5"
            points="0,-139,0,0,128,0,128,-139"
            stroke=""
            stroke-width="0"
            x="279"
            y="289"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
